--- a/index.html
+++ b/index.html
@@ -52,16 +52,23 @@
             </div>
         </nav>
         <nav class="nav-2 d-flex">
+            <img class="burger" src="img/menu_burger.svg">
+            <!--
             <svg class="burger burger-off">
                 <rect />
                 <rect />
                 <rect />
             </svg>
+            -->
             <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
+            <img class="close" src="img/croix.svg">
+            <!--
             <svg class="arrow">
                 <rect x="2" y="6" />
                 <rect x="23" y="7" />
+
             </svg>
+        -->
         </nav>
         <div class="dropdown d-flex flex-column">
             <ul class="d-flex flex-column">
@@ -85,24 +92,24 @@
                 <img class="yellowArrow" alt="" src="img/flecheyellow.png">
             </div>
         </section>
-
-
         <!-- Conteneur principal -->
         <div class="conteneur_principal">
             <div class="main-item first">
-
                 <section id="avantages" class="d-flex">
                     <img alt="" src="img/purple-wave-1.svg" class="vague">
                     <img alt="" src="img/illust_perso_1.png" class="perso">
-                    <img alt="" src="img/declic-jeunes.jpeg" class="image">
-                    <div class="d-flex flex-column">
-                        <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
-                        <span class="sous-titre">Avec Déclic, y'a plus de secrets. Découvre les avantages de montrer ta
-                            boîte.</span>
-                        <p>Taffer c'est pas juste gratter du papier, c'est aussi avoir ton propre plan et kiffer.
-                            Rejoins
-                            Déclic pour savoir comment y arriver !</p>
-                        <a class="cta cta-violet" href="#">S'informer</a>
+                    <div class="container">
+                        <img alt="" src="img/declic-jeunes.jpeg" class="image">
+                        <div class="d-flex flex-column">
+                            <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
+                            <span class="sous-titre">Avec Déclic, y'a plus de secrets. Découvre les avantages de montrer
+                                ta
+                                boîte.</span>
+                            <p>Taffer c'est pas juste gratter du papier, c'est aussi avoir ton propre plan et kiffer.
+                                Rejoins
+                                Déclic pour savoir comment y arriver !</p>
+                            <a class="cta cta-violet" href="#">S'informer</a>
+                        </div>
                     </div>
                 </section>
                 <section class="valeurs d-flex flex-column">
@@ -211,8 +218,9 @@
                     <li class="d-flex"><a href="https://goo.gl/maps/zFTsiY8oXHkMnT629" target="_blank">8 bis Rue de
                             la
                             Fontaine au Roi 75011 Paris</a></li>
-                    <li class="d-flex"><a href="tel:0678989910">06 78 98 99 10</a></li>
-                    <li class="d-flex"><a href="mailto:contact@declic.fr" target="_blank">contact@declic.fr</a></li>
+                    <li class="d-flex"><a href="tel:0762761995">07 62 76 19 95</a></li>
+                    <li class="d-flex"><a href="mailto:declic.apef@gmail.com" target="_blank">declic.apef@gmail.com</a>
+                    </li>
                 </ul>
             </section>
             <section class="footer-social-media">
