Dossier de Presse, Communiqué de Presse et Mentions légales ajoutés

--- a/index.html
+++ b/index.html
@@ -207,9 +207,13 @@
             <section class="footer-information">
                 <h2 class="titre titre-footer">Informations</h2>
                 <ul>
-                    <li class="d-flex"><a href="#">Communiqué de Presse</a></li>
-                    <li class="d-flex"><a href="#">Dossier de Presse</a></li>
-                    <li class="d-flex"><a href="#">Mentions légales</a></li>
+                    <li class="d-flex"><a href="./files/Déclic - Communiqué de presse.pdf" download="">Communiqué de
+                            Presse</a></li>
+                    <li class="d-flex"><a href="./files/Déclic - Dossier de presse.pdf" download="">Dossier de
+                            Presse</a></li>
+                    <li class="d-flex"><a href="#"
+                            onclick="window.open('./files/Déclic - Mentions Légales.pdf', '_blank', 'fullscreen=yes'); return false;">Mentions
+                            légales</a></li>
                 </ul>
             </section>
             <section class="footer-contact">
