Ajout de toutes les balises ALT

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- header -->
     <header>
         <nav class="nav-1 d-flex space-between">
-            <a onClick="return scrollToTarget('rejoindre')" href="#" class="nav-logo"><img alt="logo-declic"
+            <a onClick="return scrollToTarget('rejoindre')" href="#" class="nav-logo"><img alt="logo de Déclic"
                     src="img/logo-declic.png"></a>
             <!-- <p class="demo-logo">Logo</p> -->
             <div class="d-flex">
@@ -60,7 +60,7 @@
                 <rect />
             </svg>
             -->
-            <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
+            <a href="#" class="nav-logo"><img alt="logo de Déclic" src="img/logo-declic.png"></a>
             <img class="close" src="img/croix.svg">
             <!--
             <svg class="arrow">
@@ -84,22 +84,25 @@
     <main>
         <div class="background"></div>
         <section id="rejoindre">
-            <img alt="" src="img/illust_persoassis_1.png" class="illustration-flottante">
+            <img alt="homme violet assis avec une pancarte mauve et des formes dessus sur fond orange avec des formes autour"
+                src="img/illust_persoassis_1.png" class="illustration-flottante">
             <div class="d-flex flex-column">
                 <h1 class="titre titre-violet">Rejoins Déclic et trouves ton chemin</h1>
                 <a class="cta cta-violet" onClick="return scrollToTarget('formulaire')" href="#">Abonne-toi</a>
                 <p class="more" href="">Viens te renseigner</p>
-                <img class="yellowArrow" alt="" src="img/flecheyellow.png">
+                <img class="yellowArrow" alt="une flèche jaune qui descent vers le bas en un petit arc de cercle"
+                    src="img/flecheyellow.png">
             </div>
         </section>
         <!-- Conteneur principal -->
         <div class="conteneur_principal">
             <div class="main-item first">
                 <section id="avantages" class="d-flex">
-                    <img alt="" src="img/purple-wave-1.svg" class="vague">
-                    <img alt="" src="img/illust_perso_1.png" class="perso">
+                    <img alt="vague violette qui traverse l’écran" src="img/purple-wave-1.svg" class="vague">
+                    <img alt="illustration d’un bonhomme violet sur fond orange avec des formes de triangles et de ronds autour de lui"
+                        src="img/illust_perso_1.png" class="perso">
                     <div class="container">
-                        <img alt="" src="img/declic-jeunes.jpeg" class="image">
+                        <img alt="photo de lycéens dans la rue" src="img/declic-jeunes.jpeg" class="image">
                         <div class="d-flex flex-column">
                             <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
                             <span class="sous-titre">Avec Déclic, y'a plus de secrets. Découvre les avantages de montrer
@@ -116,7 +119,7 @@
                     <h2 class="titre titre-violet">On a quoi de plus&nbsp;?</h2>
                     <div class="valeurs-cartes d-flex">
                         <section class="information d-flex flex-column">
-                            <img alt="" src="img/icon-information.png">
+                            <img alt="icône de livre" src="img/icon-information.png">
                             <h3 class="titre titre-violet">Information</h3>
                             <p>Tu veux savoir comment monter ta boîte&nbsp;?</p>
                             <div class="separateur"></div>
@@ -127,7 +130,7 @@
                                 onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                         <section class="valorisation d-flex flex-column">
-                            <img alt="" src="img/icon-valorisation.png">
+                            <img alt="icône d’une médaille qu’on met au cou" src="img/icon-valorisation.png">
                             <h3 class="titre titre-violet">Valorisation</h3>
                             <p>Ton projet a une importance à tes yeux&nbsp;?</p>
                             <div class="separateur"></div>
@@ -138,14 +141,14 @@
                                 onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                         <section class="accompagnement d-flex flex-column">
-                            <img alt="" src="img/icon-accompagnement.png">
+                            <img alt="icône d’une famille" src="img/icon-accompagnement.png">
                             <h3 class="titre titre-violet">Accompagnement</h3>
                             <p>Raconte-nous tes rêves les plus fous</p>
                             <div class="separateur"></div>
                             <p>On veut y participer&nbsp;!</p>
-                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_purple.svg"
+                            <img class="tiktok" alt="logo de tiktok violet" src="img/tiktok_purple.svg"
                                 onclick="window.open(`https://vm.tiktok.com/ZM8WarR5e/`)">
-                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_yellow.svg"
+                            <img class="tiktok" alt="logo de tiktok jaune" src="img/tiktok_yellow.svg"
                                 onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                     </div>
@@ -156,15 +159,20 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>-->
-                    <img alt="" src="img/video-preview-maquette-fullvisuel.png">
+                    <img alt="image d’un player vidéo avec une photo de lycéens en image de prévisualisation"
+                        src="img/video-preview-maquette-fullvisuel.png">
 
                 </div>
 
                 <section id="etablissement" class="d-flex flex-column">
-                    <img alt="" src="img/forme-declic-forme modules-3.svg" class="illustration-flottante forme1">
-                    <img alt="" src="img/illust_persoassis2.png" class="illustration-flottante perso1">
-                    <img alt="" src="img/illust_crayon.png" class="illustration-flottante perso2">
-                    <img alt="" src="img/forme-modules-2.svg" class="illustration-flottante forme2">
+                    <img alt="forme organique jaune crème sur la gauche de l’image qui représente le fond du personnage assis"
+                        src="img/forme-declic-forme modules-3.svg" class="illustration-flottante forme1">
+                    <img alt="personnage illustré assis devant le fond jaune crème avec des formes autour de lui"
+                        src="img/illust_persoassis2.png" class="illustration-flottante perso1">
+                    <img alt="personnage illustré qui dessine une vague sur une énorme feuille par terre"
+                        src="img/illust_crayon.png" class="illustration-flottante perso2">
+                    <img alt="fond mauve du personnage qui dessine une vague" src="img/forme-modules-2.svg"
+                        class="illustration-flottante forme2">
                     <h2 class="titre titre-violet">Vos étudiants ont besoin de votre soutien pour leur épanouissement
                         personnel et professionnel !</h2>
                     <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de
@@ -177,8 +185,11 @@
 
                 <section id="formulaire" class="d-flex flex-column">
                     <h2 class="titre titre-violet"> N'en perds pas une miette...</h2>
-                    <img class="yellowArrow" alt="" src="img/flecheyellow.png">
-                    <img class="illustration-flottante" alt="" src="img/illust_persocomputer.png">
+                    <img class="yellowArrow" alt="une flèche jaune qui descent vers le bas en un petit arc de cercle"
+                        src="img/flecheyellow.png">
+                    <img class="illustration-flottante"
+                        alt="personnage illustré jaune crème et orange sur fond mauve qui est sur son ordinateur portable mauve avec des formes autour de lui"
+                        src="img/illust_persocomputer.png">
                     <h2 class="titre titre-violet"> et abonne-toi !</h2>
                     <form
                         action="https://gmail.us20.list-manage.com/subscribe/post?u=4cbbbdc22db0901fe66449e88&amp;id=b7de80ac0b"
@@ -202,7 +213,8 @@
 
     <!-- footer -->
     <footer class="d-flex flex-column">
-        <img alt="" src="img/purple-wave-2.svg" class="vague">
+        <img alt="forme de vague violette qui traverse l’écran et représente le fond violet du bas de page"
+            src="img/purple-wave-2.svg" class="vague">
         <div class="footer-content d-flex">
             <section class="footer-information">
                 <h2 class="titre titre-footer">Informations</h2>
@@ -230,12 +242,12 @@
             <section class="footer-social-media">
                 <h2 class="titre titre-footer">Social Media</h2>
                 <div class="d-flex">
-                    <a href="https://www.facebook.com/people/D%C3%A9clic/100075252804702/" target="_blank"><img alt=""
-                            src="img/facebook.svg"></a>
-                    <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt=""
-                            src="img/instagram.svg"></a>
-                    <a href="https://www.tiktok.com/@declic.apef?lang=fr" target="_blank"><img alt=""
-                            src="img/tiktok.svg"></a>
+                    <a href="https://www.facebook.com/people/D%C3%A9clic/100075252804702/" target="_blank"><img
+                            alt="icône jaune crème du réseau social Facebook" src="img/facebook.svg"></a>
+                    <a href="https://www.instagram.com/declic.apef/" target="_blank"><img
+                            alt="icône jaune crème du réseau social Instagram" src="img/instagram.svg"></a>
+                    <a href="https://www.tiktok.com/@declic.apef?lang=fr" target="_blank"><img
+                            alt="icône jaune crème du réseau social Tiktok" src="img/tiktok.svg"></a>
                 </div>
             </section>
         </div>
