--- a/index.html
+++ b/index.html
@@ -140,11 +140,7 @@
                 </section>
 
                 <div id="video">
-                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/4qCQTdkePWo"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                    </iframe>
+                    <iframe width="776" height="437" src="https://www.youtube.com/embed/USJvBbItWpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 </div>
 
