--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="But du site">
+    <meta name="description" content="Déclic, le dispositif qui informe les lycéens, et les jeunes étudiants sur l’entrepreneuriat, comment devenir entrepreneur, quels sont les avantages et les opportunités par rapport au salariat ?">
     <meta name="keywords" content="Mots clés pour le site">
     <meta name="author" content="Com'Moi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 
     </script>
 
-    <title>Déclic</title>
+    <title>Déclic, l’entrepreneuriat chez les lycéens</title>
     <!-- Jquery -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
