--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <img alt="illustration d’un bonhomme violet sur fond orange avec des formes de triangles et de ronds autour de lui"
                         src="img/illust_perso_1.png" class="perso">
                     <div class="container">
-                        <img alt="photo de lycéens dans la rue" src="img/declic-jeunes.jpeg" class="image">
+                        <img alt="photo de lycéens dans la rue" src="img/declic-jeunes.jpg" class="image">
                         <div class="d-flex flex-column">
                             <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
                             <span class="sous-titre">Avec Déclic, y'a plus de secrets. Découvre les avantages de montrer
