--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Déclic, le dispositif qui informe les lycéens, et les jeunes étudiants sur l’entrepreneuriat, comment devenir entrepreneur, quels sont les avantages et les opportunités par rapport au salariat ?">
-    <meta name="keywords" content="Mots clés pour le site">
-    <meta name="author" content="Com'Moi">
+    <meta name="author" content="Déclic Apef">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="img/favicon.png">
