maj lien s'informer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <p>Taffer c'est pas juste gratter du papier, c'est aussi avoir ton propre plan et kiffer.
                                 Rejoins
                                 Déclic pour savoir comment y arriver !</p>
-                            <a class="cta cta-violet" href="https://linktr.ee/declic.apef">S'informer</a>
+                            <a class="cta cta-violet" href="https://linktr.ee/declic.apef" target="_blank">S'informer</a>
                         </div>
                     </div>
                 </section>
