--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="conteneur_principal">
             <div class="main-item first">
                 <section id="avantages" class="d-flex">
-                    <img alt="vague violette qui traverse l’écran" src="img/purple-wave-1.svg" class="vague">
+                    <!-- <img alt="vague violette qui traverse l’écran" src="img/purple-wave-1.svg" class="vague"> -->
                     <img alt="illustration d’un bonhomme violet sur fond orange avec des formes de triangles et de ronds autour de lui"
                         src="img/illust_perso_1.png" class="perso">
                     <div class="container">
@@ -196,8 +196,8 @@
 
     <!-- footer -->
     <footer class="d-flex flex-column">
-        <img alt="forme de vague violette qui traverse l’écran et représente le fond violet du bas de page"
-            src="img/purple-wave-2.svg" class="vague">
+        <!--<img alt="forme de vague violette qui traverse l’écran et représente le fond violet du bas de page"
+            src="img/purple-wave-2.svg" class="vague">-->
         <div class="footer-content d-flex">
             <section class="footer-information">
                 <h2 class="titre titre-footer">Informations</h2>
